--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ main {
     text-align: center;
     border: none;
     width: 30px;
+    margin-right:5px;
     max-width: 100%;
     font-size: 24px;
 
@@ -165,7 +166,10 @@ main {
 
 .popup div {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
 }
 
 .popup button {
@@ -181,4 +185,16 @@ main {
 .popup button:hover {
     opacity: 0.6;
     background-color: rgba(0, 0, 0, 0.247);
+}
+
+.checkbox1 input {
+    display: flex;
+    align-self: center;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 50px;
+    margin: 0px 50px 30px 50px;
 }
